# DeepEcoHab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  python-publish.yml
conda_env/: env.yaml
deepecohab/: __init__.py  __main__.py  chasings.py  create_data_structure.py  create_project.py  plotting.py  social_structure.py  version.py
deepecohab/acquisition_gui/: camera_worker.py  serial_worker.py  test_gui.py
deepecohab/analysis/: antenna_analysis.py
deepecohab/antenna_analysis/: __init__.py  activity.py  auxiliary_analysis.py  chasings.py  in_cohort_sociability.py  incohort_sociability.py
deepecohab/app/: __main__.py  app.py  dash_layouts.py  shortcut.py
deepecohab/config/: antenna_combinations.toml  tunnels.toml
deepecohab/core/: create_data_structure.py  create_project.py  registries.py
deepecohab/dash/: dash_layouts.py  dash_plotting.py  dashboard.py  plot_factory.py  plots.py
deepecohab/plots/: plotting.py
deepecohab/plotting/: dash_plotting.py  plot_catalog.py  plot_factory.py
deepecohab/src/: activity.py  auxiliary_analysis.py  chasings.py  config_templates.py  create_data_structure.py  create_project.py  in_cohort_sociability.py  social_structure.py
deepecohab/utils/: __init___.py  auxfun.py  auxfun_dashboard.py  auxfun_plots.py  cache_config.py  config_templates.py  performance_eval.py
docs/: _config.yml  _toc.yml  dashboard.md  data_keys.md  docs_principles.md  get_started.md  intro.md  tutorial_antenna.md
environment/: env.yaml
example_script/: example_notebook.ipynb
example_script/test_data/: 20230524_190000.txt  20230524_200000.txt  20230524_210000.txt  20230524_230000.txt  20230525_000000.txt  20230525_050000.txt  20230525_070000.txt  20230525_170000.txt  20230525_200000.txt  20230525_210000.txt  20230525_220000.txt  20230525_230000.txt  20230526_000000.txt  20230526_040000.txt  20230526_120000.txt  20230526_140000.txt  20230526_150000.txt  20230526_170000.txt  20230526_180000.txt  20230527_000000.txt  20230527_020000.txt  20230527_060000.txt  20230527_080000.txt  20230527_140000.txt  20230527_220000.txt  20230527_230000.txt  20230528_010000.txt  20230528_040000.txt  20230528_050000.txt  20230528_080000.txt  20230528_110000.txt  20230528_130000.txt  20230528_150000.txt  20230528_190000.txt  20230529_020000.txt  20230529_030000.txt  20230529_080000.txt  20230529_090000.txt  20230529_100000.txt  20230529_110000.txt  (+168 more)
examples/: example_load_existing_project.ipynb  example_notebook.ipynb  example_notebook_custom_layout.ipynb  example_notebook_field.ipynb  reid_notebook.ipynb
examples/example_data/: 20230524_120000.txt  20230524_130000.txt  20230524_150000.txt  20230524_170000.txt  20230524_180000.txt  20230525_060000.txt  20230525_100000.txt  20230525_130000.txt  20230525_150000.txt  20230526_020000.txt  20230526_030000.txt  20230526_060000.txt  20230526_110000.txt  20230526_130000.txt  20230526_200000.txt  20230526_210000.txt  20230526_230000.txt  20230527_040000.txt  20230527_090000.txt  20230527_120000.txt  20230527_150000.txt  20230527_160000.txt  20230527_210000.txt  20230528_000000.txt  20230528_020000.txt  20230528_030000.txt  20230528_100000.txt  20230528_120000.txt  20230528_140000.txt  20230528_200000.txt  20230528_210000.txt  20230528_220000.txt  20230529_010000.txt  20230529_050000.txt  20230529_070000.txt  20230529_120000.txt  20230529_150000.txt  20230529_160000.txt  20230529_180000.txt  20230529_220000.txt  (+1 more)
examples/example_data_custom/: COM4_20240702_150000.txt  COM4_20240702_160000.txt  COM4_20240702_180000.txt  COM4_20240702_200000.txt  COM4_20240702_210000.txt  COM4_20240702_220000.txt  COM4_20240703_020000.txt  COM4_20240703_030000.txt  COM4_20240703_040000.txt  COM4_20240703_050000.txt  COM4_20240703_060000.txt  COM4_20240703_070000.txt  COM4_20240703_080000.txt  COM4_20240703_090000.txt  COM4_20240703_130000.txt  COM4_20240703_150000.txt  COM4_20240703_160000.txt  COM4_20240703_170000.txt  COM4_20240703_200000.txt  COM4_20240703_220000.txt  COM4_20240704_000000.txt  COM4_20240704_030000.txt  COM4_20240704_040000.txt  COM4_20240704_050000.txt  COM4_20240704_060000.txt  COM4_20240704_100000.txt  COM4_20240704_130000.txt  COM4_20240704_140000.txt  COM4_20240704_160000.txt  COM4_20240704_180000.txt  COM4_20240704_190000.txt  COM4_20240704_230000.txt  COM4_20240705_000000.txt  COM4_20240705_030000.txt  COM4_20240705_080000.txt  COM4_20240705_100000.txt  COM4_20240705_130000.txt  COM4_20240705_140000.txt  COM4_20240705_170000.txt  COM4_20240705_200000.txt  (+126 more)
examples/test_data/: 20230524_140000.txt  20230524_160000.txt  20230524_220000.txt  20230525_010000.txt  20230525_020000.txt  20230525_030000.txt  20230525_040000.txt  20230525_080000.txt  20230525_090000.txt  20230525_110000.txt  20230525_120000.txt  20230525_140000.txt  20230525_160000.txt  20230525_180000.txt  20230525_190000.txt  20230526_010000.txt  20230526_050000.txt  20230526_070000.txt  20230526_080000.txt  20230526_090000.txt  20230526_100000.txt  20230526_160000.txt  20230526_190000.txt  20230526_220000.txt  20230527_010000.txt  20230527_030000.txt  20230527_050000.txt  20230527_070000.txt  20230527_100000.txt  20230527_110000.txt  20230527_130000.txt  20230527_170000.txt  20230527_180000.txt  20230527_190000.txt  20230527_200000.txt  20230528_060000.txt  20230528_070000.txt  20230528_090000.txt  20230528_160000.txt  20230528_170000.txt  (+9 more)
examples/test_data_custom/: COM4_20240702_140000.txt  COM4_20240702_170000.txt  (+193 more)
src/: chasings.py  create_data_structure.py  create_project.py  social_structure.py
tests/: strategies.py  test_activity.py  test_analysis_properties.py  test_auxfun.py  test_chasings.py  test_config_io.py  test_config_templates.py  test_dashboard_helpers.py  test_e2e_field.py  test_features.py  test_matches.py  test_minute_padding.py  test_pairwise_meetings.py  test_phase_grid.py  test_ranking.py  test_registry.py  test_sociability.py  test_time_alone.py  test_tube_test.py
utils/: auxfun.py
(+13 files in other folders)
