[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepecohab"
version = "0.4"
description = "EcoHab with some machine learning"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Konrad Danielewski", email = "k.danielewski@nencki.edu.pl"},
    {name = "Ula Włodkowska", email = "u.wlodkowska@nencki.edu.pl"},
]
keywords = ["neuroscience", "ecology", "dash", "data-visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "MIT",
    "Operating System :: OS Independent",
]

dependencies = [
    "dash",
    "dash-bootstrap-components",
    "ipykernel",
    "kaleido",
    "nbformat",
    "networkx",
    "numpy",
    "openskill",
    "plotly",
    "polars",
    "scipy",
    "toml",
    "tzlocal",
]

[project.urls]
Homepage = "https://github.com/KonradDanielewski/DeepEcoHab"
Issues = "https://github.com/KonradDanielewski/DeepEcoHab/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["deepecohab*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.css", "*.zip", "*.txt"]
"deepecohab.dash.assets" = ["style.css"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true