[build-system]
requires      = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "deepecohab"
version = "0.5.0rc8"
description = "EcoHab with some machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Konrad Danielewski", email = "k.danielewski@nencki.edu.pl" },
    { name = "Ula Włodkowska", email = "u.wlodkowska@nencki.edu.pl" },
]
keywords = [
    "neuroscience",
    "ecology",
    "dash",
    "data-visualization",
    "data-analysis",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "dash[diskcache]",
    "dash-bootstrap-components",
    "ipykernel",
    "kaleido",
    "nbformat",
    "networkx",
    "numpy",
    "openskill",
    "plotly",
    "polars",
    "scipy",
    "toml",
    "tzlocal",
]

    [project.optional-dependencies]
    test = [
        "pytest",
        "hypothesis",
    ]

    [project.urls]
    Homepage = "https://github.com/KonradDanielewski/DeepEcoHab"
    Issues   = "https://github.com/KonradDanielewski/DeepEcoHab/issues"

[tool.setuptools]
include-package-data = true

    [tool.setuptools.packages.find]
    where      = [ "." ]
    include    = [ "deepecohab*" ]
    namespaces = true

    [tool.setuptools.package-data]
    "deepecohab.app.assets" = ["*"]
    "deepecohab.config" = ["*"]

[tool.ruff]
line-length = 100

    [tool.ruff.format]
    quote-style  = "double"
    indent-style = "tab"

    docstring-code-format = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts   = "-ra"
